# TDS-23f2004422-Project1

./: .dockerignore  .gitignore  Dockerfile  LICENSE  main.py  main1.py  pyproject.toml  render.yaml  requirements.txt
utils/: embedder.py  embedder1.py
